--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
 开始做网站
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+床前明月光
+
+</body>
+</html>
