--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>不知道是啥</title>
 </head>
 <body>
-<p>床前明月光</p>
+ <img scr="shidaw2.jpg"/>
+      <p>床前明月光</p>
 <p>疑是地上光</p>
 </body>
 </html>
