--- a/001/index.html
+++ b/001/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>不知道是啥</title>
+    <style type="text/css">
+        body{
+            background-image:url(./shidaw2.djp);
+        }
 </head>
 <body>
  <img src="shidaw2.jpg"/>
