--- a/001/index.html
+++ b/001/index.html
@@ -6,7 +6,7 @@
     <title>不知道是啥</title>
     <style type="text/css">
         body{
-            background-image:url(./shidaw2.djp);
+            background-image:url(./shidaw2.jpg);
         }
 </head>
 <body>
