--- a/001/index.html
+++ b/001/index.html
@@ -7,6 +7,7 @@
     <style type="text/css">
         body{
             background-image:url(./1.jpg);
+            background-size:100% 100%;
         }
 </head>
 <body>
