--- a/001/index.html
+++ b/001/index.html
@@ -8,7 +8,12 @@
         body{
             background-image:url(./1.jpg);
             background-size:100% 100%;
+            height:100%;
         }
+        html{
+            height:100%;
+        }
+        </style>
 </head>
 <body>
  <img src="shidaw2.jpg"/>
